[package]
name = "ipasir-sys"
version = "0.1.0"
authors = ["Chris Patuzzo <chris@patuzzo.co.uk>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tuzz/ipasir-sys"
documentation = "https://github.com/tuzz/ipasir-sys"
homepage = "https://crates.io/crates/ipasir-sys"
description = "A Rust crate that contains FFI bindings for IPASIR-compatible SAT solvers."
keywords = ["ipasir", "ffi", "incremental", "sat", "satisfiability"]
categories = ["external-ffi-bindings", "science"]
travis-ci = "tuzz/ipasir-sys"

[build-dependencies]
bindgen = "0.49.3"
copy_dir = "0.1.2"
